--- a/css/main.css
+++ b/css/main.css
@@ -43,7 +43,7 @@ header nav a:hover {
 /* filme principal */
 .filme-principal {
     font-size: 16px;
-    background: linear-gradient(rgba(0, 0, 0, .50), rgba(0, 0, 0, .50)+100%), url(../img/capa-bleach.jpg);
+    background: linear-gradient(rgba(0, 0, 0, .50), rgba(0, 0, 0, .50)+100%), url(../../img/capa-bleach.jpg);
 
     height: 600px;
     background-size: cover;
